plugins {
	id 'idea'
	id 'java'

	id 'org.springframework.boot'

	id 'com.diffplug.spotless' version '5.14.0'
	id 'com.github.ben-manes.versions' version '0.39.0'
	id 'com.google.cloud.tools.jib' version '3.1.1'
	id 'com.gorylenko.gradle-git-properties' version '2.3.1'
	id 'io.freefair.lombok' version '6.0.0-m2'
	id 'org.hidetake.swagger.generator'
}

sourceCompatibility = '11'

repositories {
	mavenCentral()
	maven { url "https://broadinstitute.jfrog.io/broadinstitute/libs-snapshot-local/" }
	maven { url "https://broadinstitute.jfrog.io/broadinstitute/libs-release/" }
}

apply from: 'publishing.gradle'
apply from: 'spring.gradle'
apply from: 'generators.gradle'
apply from: 'tooling.gradle'

dependencies {
	constraints {
		implementation 'com.google.guava:guava:30.1.1-jre' // "-jre" for Java 8 or higher
	}
	implementation group: "com.google.guava", name:"guava"

	annotationProcessor 'org.immutables:value:2.8.2'
	implementation 'bio.terra:terra-common-lib:0.0.49-SNAPSHOT'
	implementation 'org.broadinstitute.dsde.workbench:sam-client_2.13:0.1-beb5b1c'

	// for testing with mock web server
	testImplementation 'org.mock-server:mockserver-netty:5.11.1'
}
